--- a/public/css/productIndex.css
+++ b/public/css/productIndex.css
@@ -54,7 +54,7 @@ tr:nth-child(even) {
     background-color: #f9f9f9;
 }
 
-/* Buttons */
+/* Button */
 button {
     padding: 5px 10px;
     background-color: #dc3545;
